--- a/Linear-Regression/CEP_Linear_Regression_brainhead.ipynb
+++ b/Linear-Regression/CEP_Linear_Regression_brainhead.ipynb
@@ -69,7 +69,7 @@
         "# The following python directive helps to plot the graph in the notebook directly\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
           "height": 203
         },
         "id": "IHcf8Q4q7cNX",
-        "outputId": "a966697c-eec7-420b-84a7-fbdec7f49c27"
+        "outputId": "ebdf310d-754b-472d-a001-0e00d66dab93"
       },
       "source": [
         "#Let us explore the data and the description \n",
@@ -101,7 +101,7 @@
         "#print the first few rows of the data \n",
         "brainhead_data.head()\n"
       ],
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +181,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 28
         }
       ]
     },
@@ -192,13 +192,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e30rAQsUAOJU",
-        "outputId": "812a2d34-e0e3-44ad-f4d7-d2fbc3404a37"
+        "outputId": "c3e5e974-9976-4169-8446-b571c0787251"
       },
       "source": [
         "#if you wish to print the entire data, then use the following\n",
         "print(brainhead_data)"
       ],
-      "execution_count": 30,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j2pWNPCM8apJ",
-        "outputId": "0d8c03ca-ae1d-4561-ffcf-82bf144ff0ef"
+        "outputId": "d1120fd0-38fc-4d87-cd42-fb6560988b89"
       },
       "source": [
         "import urllib.request   #this package is useful for accessing text files over internet \n",
@@ -249,7 +249,7 @@
         "  decoded_line = line.decode(\"utf-8\")\n",
         "  print(decoded_line) "
       ],
-      "execution_count": 31,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
           "height": 357
         },
         "id": "6vn3zD4SB3ht",
-        "outputId": "7347b60f-cd43-461c-a831-e2ef7262378e"
+        "outputId": "ad896ea1-d6e8-453b-ed52-d18fb3038944"
       },
       "source": [
         "brainhead_data.columns = ['Gender', 'Age Range' , 'Head size' , 'Brain weight']\n",
@@ -312,7 +312,7 @@
         "#check by printing the data again\n",
         "brainhead_data.head(10)"
       ],
-      "execution_count": 32,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +432,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 31
         }
       ]
     },
@@ -453,7 +453,7 @@
           "height": 295
         },
         "id": "aGs0mgVU9aTe",
-        "outputId": "d1247852-19c3-4032-d707-e5d671727088"
+        "outputId": "0a342eb8-2f3f-4465-e6ec-08f998fb00cf"
       },
       "source": [
         "#We will plot a scatter plot of the math score vs tissue concentration \n",
@@ -464,7 +464,7 @@
         "plt.ylabel(\"Brain weight\")\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
@@ -505,14 +505,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q9X7RNSU_g4e",
-        "outputId": "1fff4174-5842-4391-cec3-663c9a13bd71"
+        "outputId": "27a60bf6-c5fb-4a49-9ad8-8fe80dc392c4"
       },
       "source": [
         "#Let us now compute beta_0 and beta_1 from the anscombe data set 2\n",
         "n = len(brainhead_data.index) #number of data points in the data set\n",
         "print('number of data points in the data set:',n)"
       ],
-      "execution_count": 35,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,11 +526,132 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "AI1oVjbUboAj",
+        "outputId": "28e33d3b-5671-4215-a638-25eac982b8ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 295
+        }
+      },
+      "source": [
+        "brainhead_data.describe()"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Gender</th>\n",
+              "      <th>Age Range</th>\n",
+              "      <th>Head size</th>\n",
+              "      <th>Brain weight</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>237.000000</td>\n",
+              "      <td>237.000000</td>\n",
+              "      <td>237.000000</td>\n",
+              "      <td>237.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>1.434599</td>\n",
+              "      <td>1.535865</td>\n",
+              "      <td>3633.991561</td>\n",
+              "      <td>1282.873418</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>0.496753</td>\n",
+              "      <td>0.499768</td>\n",
+              "      <td>365.261422</td>\n",
+              "      <td>120.340446</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>2720.000000</td>\n",
+              "      <td>955.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>3389.000000</td>\n",
+              "      <td>1207.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>3614.000000</td>\n",
+              "      <td>1280.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>3876.000000</td>\n",
+              "      <td>1350.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>4747.000000</td>\n",
+              "      <td>1635.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           Gender   Age Range    Head size  Brain weight\n",
+              "count  237.000000  237.000000   237.000000    237.000000\n",
+              "mean     1.434599    1.535865  3633.991561   1282.873418\n",
+              "std      0.496753    0.499768   365.261422    120.340446\n",
+              "min      1.000000    1.000000  2720.000000    955.000000\n",
+              "25%      1.000000    1.000000  3389.000000   1207.000000\n",
+              "50%      1.000000    2.000000  3614.000000   1280.000000\n",
+              "75%      2.000000    2.000000  3876.000000   1350.000000\n",
+              "max      2.000000    2.000000  4747.000000   1635.000000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YCuKqQqBFklC",
-        "outputId": "f05fe751-754d-4f71-e60b-7c7636319622"
+        "outputId": "3d2019fb-2196-42a3-a9c5-041c75e8fa9a"
       },
       "source": [
         "#First let us compute x_bar and y_bar \n",
@@ -544,7 +665,7 @@
         "y_bar /= n\n",
         "print('x bar:',x_bar, 'y bar:',y_bar)"
       ],
-      "execution_count": 36,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +683,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOOBCb5bFtKr",
-        "outputId": "591ed02a-8c84-40a6-86a8-a1742031e59c"
+        "outputId": "0dd685c9-d169-458d-efbc-ae8c83fff2b4"
       },
       "source": [
         "#Then we will compute Sigma_XX and Sigma_XY \n",
@@ -574,7 +695,7 @@
         "  sigma_xy += (float(brainhead_data.iat[i,2]) - x_bar) * (float(brainhead_data.iat[i,3])-y_bar) #computing (x^i - x_bar)(y^i-y_bar)\n",
         "print('sigma_xx:',sigma_xx, 'sigma_xy:',sigma_xy)"
       ],
-      "execution_count": 37,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,7 +713,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y5WC5Rs4FuOg",
-        "outputId": "11f3f1a8-5033-4728-e249-5233d4053f3f"
+        "outputId": "d828f90a-bcc9-4a9a-e767-577aa80a00c4"
       },
       "source": [
         "#Now we can compute beta_0 and beta_1\n",
@@ -601,7 +722,7 @@
         "\n",
         "print('beta_0:', beta_0, 'beta_1', beta_1)\n"
       ],
-      "execution_count": 38,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,7 +751,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8jWKeE7OKR7Y",
-        "outputId": "39b96410-a2fb-4a42-98f8-ee023c5deedd"
+        "outputId": "647efdf8-4eda-42ff-b458-7e9073f08b6d"
       },
       "source": [
         "#compute the left and right limits of the x-axis\n",
@@ -651,7 +772,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 40,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,7 +791,7 @@
           "height": 295
         },
         "id": "Fku6RIQILQzd",
-        "outputId": "d3d7a8df-cc6c-4965-beb9-9620fa5e8a7b"
+        "outputId": "abcc219f-cea3-48f2-ab3e-18031e2f5345"
       },
       "source": [
         "import numpy as np\n",
@@ -686,7 +807,7 @@
         "#plt.grid()\n",
         "plt.show()"
       ],
-      "execution_count": 43,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -721,7 +842,7 @@
           "height": 295
         },
         "id": "ymSVWrHgql4y",
-        "outputId": "7e9b4840-09be-41c0-be77-0698c7cef104"
+        "outputId": "bd0fb892-efe3-4acc-8ad3-1119fed69769"
       },
       "source": [
         "e_i_residuals_list = [] \n",
@@ -735,14 +856,14 @@
         "  e_i_residuals_list.append(e_i) #append the value of e_i to the list \n",
         "\n",
         "#plot the residuals e_i against the actual observations y_i\n",
-        "plt.scatter(anscombe_data_2['Brain weight'], e_i_residuals_list,color='r')\n",
+        "plt.scatter(brainhead_data['Brain weight'], e_i_residuals_list,color='r')\n",
         "plt.title(\"Residual plot\")\n",
         "plt.xlabel(\"Y responses\")\n",
         "plt.ylabel(\"Residuals\")\n",
         "plt.grid()\n",
         "plt.show()"
       ],
-      "execution_count": 44,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "display_data",
@@ -783,7 +904,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mvN3xkfg3AZs",
-        "outputId": "f59d8d27-adae-4bcd-9a70-d19ce7a59be5"
+        "outputId": "83026d91-5c77-4218-8f7a-b96cb6173986"
       },
       "source": [
         "#Note that sigma_XY and sigma_XX have already been computed. \n",
@@ -802,7 +923,7 @@
         "sample_correlation = sigma_xy/(np.sqrt(sigma_xx * sigma_yy))\n",
         "print('sample correlation:',sample_correlation)"
       ],
-      "execution_count": 45,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +951,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NpaMDr5syhMe",
-        "outputId": "4aae1c6c-b4e9-4b61-fda1-884ddd34f6f7"
+        "outputId": "89645aec-2576-4971-ce56-90dcdcfe11a2"
       },
       "source": [
         "#Note that sum of squared residuals needs to be computed \n",
@@ -848,7 +969,7 @@
         "R_sq = 1-sum_sq_residuals/sigma_yy\n",
         "print('R^2:',R_sq)"
       ],
-      "execution_count": 47,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +1004,7 @@
       "source": [
         ""
       ],
-      "execution_count": 47,
+      "execution_count": 42,
       "outputs": []
     }
   ]
