--- a/Linear-Regression/CEP_Linear_Regression_brainhead.ipynb
+++ b/Linear-Regression/CEP_Linear_Regression_brainhead.ipynb
@@ -69,7 +69,7 @@
         "# The following python directive helps to plot the graph in the notebook directly\n",
         "%matplotlib inline"
       ],
-      "execution_count": 27,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
           "height": 203
         },
         "id": "IHcf8Q4q7cNX",
-        "outputId": "ebdf310d-754b-472d-a001-0e00d66dab93"
+        "outputId": "fb3ed26c-1e7e-4dcc-b3c9-ad77bdc2c5dc"
       },
       "source": [
         "#Let us explore the data and the description \n",
@@ -101,7 +101,7 @@
         "#print the first few rows of the data \n",
         "brainhead_data.head()\n"
       ],
-      "execution_count": 28,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +181,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 3
         }
       ]
     },
@@ -192,13 +192,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e30rAQsUAOJU",
-        "outputId": "c3e5e974-9976-4169-8446-b571c0787251"
+        "outputId": "66ec996e-79a2-49e8-aa59-cd074a1351ec"
       },
       "source": [
         "#if you wish to print the entire data, then use the following\n",
         "print(brainhead_data)"
       ],
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j2pWNPCM8apJ",
-        "outputId": "d1120fd0-38fc-4d87-cd42-fb6560988b89"
+        "outputId": "d065e6b4-90aa-46bd-976d-5000727836c7"
       },
       "source": [
         "import urllib.request   #this package is useful for accessing text files over internet \n",
@@ -249,7 +249,7 @@
         "  decoded_line = line.decode(\"utf-8\")\n",
         "  print(decoded_line) "
       ],
-      "execution_count": 30,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
           "height": 357
         },
         "id": "6vn3zD4SB3ht",
-        "outputId": "ad896ea1-d6e8-453b-ed52-d18fb3038944"
+        "outputId": "63aaad73-0271-4365-d7f1-006149fe9666"
       },
       "source": [
         "brainhead_data.columns = ['Gender', 'Age Range' , 'Head size' , 'Brain weight']\n",
@@ -312,7 +312,7 @@
         "#check by printing the data again\n",
         "brainhead_data.head(10)"
       ],
-      "execution_count": 31,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +432,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 6
         }
       ]
     },
@@ -453,10 +453,10 @@
           "height": 295
         },
         "id": "aGs0mgVU9aTe",
-        "outputId": "0a342eb8-2f3f-4465-e6ec-08f998fb00cf"
+        "outputId": "825bf39e-4978-4f40-cf66-cbd5ac8b1db9"
       },
       "source": [
-        "#We will plot a scatter plot of the math score vs tissue concentration \n",
+        "#We will plot a scatter plot of the Head size  vs Brain weight \n",
         "\n",
         "plt.scatter(brainhead_data['Head size'], brainhead_data['Brain weight'])\n",
         "plt.title(\"brainhead_data: Head size vs Brain weight\")\n",
@@ -464,7 +464,7 @@
         "plt.ylabel(\"Brain weight\")\n",
         "plt.show()"
       ],
-      "execution_count": 32,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -495,7 +495,7 @@
         "id": "JZgcnaqX-q1W"
       },
       "source": [
-        "$\\Large{\\text{Computing } \\beta_0, \\beta_1 \\text{ for the Anscombe data set 2}}:$"
+        "$\\Large{\\text{Computing } \\beta_0, \\beta_1 \\text{ for the brain weight data set }}:$"
       ]
     },
     {
@@ -505,14 +505,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q9X7RNSU_g4e",
-        "outputId": "27a60bf6-c5fb-4a49-9ad8-8fe80dc392c4"
+        "outputId": "ef27faf0-2834-4f10-8c15-b6bd29fd4124"
       },
       "source": [
         "#Let us now compute beta_0 and beta_1 from the anscombe data set 2\n",
         "n = len(brainhead_data.index) #number of data points in the data set\n",
         "print('number of data points in the data set:',n)"
       ],
-      "execution_count": 33,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,16 +527,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "AI1oVjbUboAj",
-        "outputId": "28e33d3b-5671-4215-a638-25eac982b8ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "c222cefa-0bb6-4463-b3e4-59fa50c17b62"
       },
       "source": [
         "brainhead_data.describe()"
       ],
-      "execution_count": 34,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +640,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 9
         }
       ]
     },
@@ -651,10 +651,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YCuKqQqBFklC",
-        "outputId": "3d2019fb-2196-42a3-a9c5-041c75e8fa9a"
+        "outputId": "356de5bf-5eaf-4b68-8ac5-fb13ddef9097"
       },
       "source": [
-        "#First let us compute x_bar and y_bar \n",
+        "#First let us compute x_bar and y_bar (Means(x) and Means(Y))\n",
         "x_bar = 0 \n",
         "y_bar = 0\n",
         "\n",
@@ -665,7 +665,7 @@
         "y_bar /= n\n",
         "print('x bar:',x_bar, 'y bar:',y_bar)"
       ],
-      "execution_count": 35,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +683,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOOBCb5bFtKr",
-        "outputId": "0dd685c9-d169-458d-efbc-ae8c83fff2b4"
+        "outputId": "477cf642-ad8c-487e-96ad-4d6269d7a16f"
       },
       "source": [
         "#Then we will compute Sigma_XX and Sigma_XY \n",
@@ -695,7 +695,7 @@
         "  sigma_xy += (float(brainhead_data.iat[i,2]) - x_bar) * (float(brainhead_data.iat[i,3])-y_bar) #computing (x^i - x_bar)(y^i-y_bar)\n",
         "print('sigma_xx:',sigma_xx, 'sigma_xy:',sigma_xy)"
       ],
-      "execution_count": 36,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,7 +713,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y5WC5Rs4FuOg",
-        "outputId": "d828f90a-bcc9-4a9a-e767-577aa80a00c4"
+        "outputId": "cce9345a-8c90-47e1-fb3d-7cc40d53dafa"
       },
       "source": [
         "#Now we can compute beta_0 and beta_1\n",
@@ -722,7 +722,7 @@
         "\n",
         "print('beta_0:', beta_0, 'beta_1', beta_1)\n"
       ],
-      "execution_count": 37,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -751,7 +751,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8jWKeE7OKR7Y",
-        "outputId": "647efdf8-4eda-42ff-b458-7e9073f08b6d"
+        "outputId": "4fcffd7a-60e2-4e8b-8ab5-480fdcb0ea62"
       },
       "source": [
         "#compute the left and right limits of the x-axis\n",
@@ -772,7 +772,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 38,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,7 +791,7 @@
           "height": 295
         },
         "id": "Fku6RIQILQzd",
-        "outputId": "abcc219f-cea3-48f2-ab3e-18031e2f5345"
+        "outputId": "3012aad3-f510-4a89-ca6f-869f377a5c21"
       },
       "source": [
         "import numpy as np\n",
@@ -807,7 +807,7 @@
         "#plt.grid()\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -842,7 +842,7 @@
           "height": 295
         },
         "id": "ymSVWrHgql4y",
-        "outputId": "bd0fb892-efe3-4acc-8ad3-1119fed69769"
+        "outputId": "e8a66d2e-681e-45af-ac94-aaf7eaa8867f"
       },
       "source": [
         "e_i_residuals_list = [] \n",
@@ -863,7 +863,7 @@
         "plt.grid()\n",
         "plt.show()"
       ],
-      "execution_count": 40,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -904,7 +904,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mvN3xkfg3AZs",
-        "outputId": "83026d91-5c77-4218-8f7a-b96cb6173986"
+        "outputId": "a96af0ab-309d-45a3-fd39-247ce645d48e"
       },
       "source": [
         "#Note that sigma_XY and sigma_XX have already been computed. \n",
@@ -923,7 +923,7 @@
         "sample_correlation = sigma_xy/(np.sqrt(sigma_xx * sigma_yy))\n",
         "print('sample correlation:',sample_correlation)"
       ],
-      "execution_count": 41,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,7 +951,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NpaMDr5syhMe",
-        "outputId": "89645aec-2576-4971-ce56-90dcdcfe11a2"
+        "outputId": "23af27cb-9256-4eef-f21b-2005931351ee"
       },
       "source": [
         "#Note that sum of squared residuals needs to be computed \n",
@@ -969,7 +969,7 @@
         "R_sq = 1-sum_sq_residuals/sigma_yy\n",
         "print('R^2:',R_sq)"
       ],
-      "execution_count": 42,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,6 +977,43 @@
           "text": [
             "sum of squared residuals: 1232728.0146365522\n",
             "R^2: 0.999081126505425\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jAVL__WrgwAf",
+        "outputId": "8260e56f-b2d1-4893-a924-1f40a20519de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Compute R^2 using scikit learn\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "x_head_size1 = brainhead_data['Head size'].values\n",
+        "x_head_size = x_head_size1.reshape(n,1)\n",
+        "y_brain_weight = brainhead_data['Brain weight'].values\n",
+        "\n",
+        "reg = LinearRegression()\n",
+        "\n",
+        "reg = reg.fit(x_head_size, y_brain_weight)\n",
+        "Y_pred = reg.predict(x_head_size)\n",
+        "\n",
+        "R2_score = reg.score(x_head_size, y_brain_weight)\n",
+        "print(R2_score)\n",
+        "\n"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.639311719957\n"
           ]
         }
       ]
@@ -1004,7 +1041,7 @@
       "source": [
         ""
       ],
-      "execution_count": 42,
+      "execution_count": 17,
       "outputs": []
     }
   ]
