--- a/Assignment/AIMLCEP_Q1.ipynb
+++ b/Assignment/AIMLCEP_Q1.ipynb
@@ -33,7 +33,7 @@
         "id": "49XDDPG96YBS"
       },
       "source": [
-        "$\\Huge{\\text{Linear Regression in High Dimensions}}$"
+        "$\\Huge{\\text{Solution for Q1 (Linear Regression using OLRS}}$"
       ]
     },
     {
