--- a/Assignment/AIMLCEP_Q1.ipynb
+++ b/Assignment/AIMLCEP_Q1.ipynb
@@ -1623,7 +1623,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOOBCb5bFtKr",
-        "outputId": "d5458ab1-67e1-401c-80fe-1df49b4d3ea7"
+        "outputId": "3f9b858b-fc87-4e14-c516-309eaf300c79"
       },
       "source": [
         "#Now we are ready for finding beta\n",
@@ -1637,9 +1637,9 @@
         "\n",
         "beta_train = np.matmul(np.linalg.inv(XTX),Xy)\n",
         "\n",
-        "print('beta',beta)"
+        "print('beta',beta_train)"
       ],
-      "execution_count": 115,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "stream",
@@ -1782,75 +1782,13 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NpaMDr5syhMe",
-        "outputId": "5a2b0a00-dec2-457e-d1c1-46c020fc2a2f"
-      },
       "source": [
-        "#We shall now compute R^2 for weight_height_data costs data\n",
-        "\n",
-        "#first we shall compute y_bar \n",
-        "y_bar = 0\n",
-        "for i in range(n_train): #access each row from the data set \n",
-        "  y_i = float(weight_height_data.iat[i,4]) #access element at TOC column\n",
-        "  y_bar += y_i\n",
-        "\n",
-        "y_bar /= n_train\n",
-        "print('y_bar',y_bar)\n",
-        "\n",
-        "#Next we shall compute sigma_yy, which is the variance of y \n",
-        "sigma_yy = 0\n",
-        "for i in range(n): #access each row from the data set \n",
-        "  y_i = float(weight_height_data.iat[i,4]) #access element at TOC column\n",
-        "  sigma_yy += (y_i-y_bar)**2\n",
-        "\n",
-        "print('sigma_yy:', sigma_yy)\n",
-        "\n",
-        "#now we can compute sum of squared residuals \n",
-        "sum_sq_residuals = 0\n",
-        "for i in range(n): #access each row from the data set \n",
-        "  x_i = X[i,:] #access i-th row of X\n",
-        "  y_i = y[i] #access i-th row of y\n",
-        "\n",
-        "  y_pred_i = np.dot(x_i,beta_train) #compute the prediction obtained using the regression coefficients \n",
-        "  e_i = y_i - y_pred_i #compute the difference between the actual observation y_i and prediction y_pred_i\n",
-        "\n",
-        "  sum_sq_residuals += (e_i)**2\n",
-        "\n",
-        "print('sum of squared residuals:', sum_sq_residuals)\n",
-        "print('Root Mean Squared Error (RMSE):', np.sqrt(sum_sq_residuals/n_train))\n",
-        "\n",
-        "#Then we will compute the R^2 quantity\n",
-        "R_sq = 1-sum_sq_residuals/sigma_yy\n",
-        "print('R^2:',R_sq)"
-      ],
-      "execution_count": 135,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "y_bar 404.4782258064517\n",
-            "sigma_yy: 15451937.951209672\n",
-            "sum of squared residuals: [2104316.3107336]\n",
-            "Root Mean Squared Error (RMSE): [130.27007649]\n",
-            "R^2: [0.86381538]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#We shall now compute R^2 for training airline costs data\n",
+        "#We shall now compute R^2 for training height weight data\n",
         "n_train = len(weight_height_data.index) #number of data points in the training data set\n",
         "#first we shall compute y_bar \n",
         "y_bar_train = 0\n",
         "for i in range(n_train): #access each row from the training data set \n",
-        "  y_train_i = float(weight_height_data.iat[i,4]) #access element at TOC column\n",
+        "  y_train_i = float(weight_height_data.iat[i,4]) #access element at weight_g column\n",
         "  y_bar_train += y_train_i\n",
         "\n",
         "y_bar_train /= n_train\n",
@@ -1859,7 +1797,7 @@
         "#Next we shall compute sigma_yy, which is the variance of y_train\n",
         "sigma_yy_train = 0\n",
         "for i in range(n_train): #access each row from the training data set \n",
-        "  y_i = float(weight_height_data.iat[i,4]) #access element at TOC column\n",
+        "  y_i = float(weight_height_data.iat[i,4]) #access element at weight_g column\n",
         "  sigma_yy_train += (y_i-y_bar_train)**2\n",
         "\n",
         "print('sigma_yy_train:', sigma_yy_train)\n",
@@ -1887,9 +1825,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qC-xxWxNWa5o",
-        "outputId": "6bea4ea8-0910-4fd3-f813-5f5b6168d49a"
+        "outputId": "729fd088-2fc8-45b2-c6d3-e6f300c4727f"
       },
-      "execution_count": 137,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "stream",
@@ -1900,6 +1838,123 @@
             "sum of squared residuals: [2104316.3107336]\n",
             "Root Mean Squared Error (RMSE): [130.27007649]\n",
             "R^2 score: [0.86381538]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\Large{\\text{Finding $\\beta$ using sklearn library}}$"
+      ],
+      "metadata": {
+        "id": "y_O-Tkthdcub"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "# creating an object of LinearRegression class\n",
+        "LR = LinearRegression()\n",
+        "# fitting the training data\n",
+        "LR.fit(X_train,y_train)\n",
+        "#print the coefficients and the intercept\n",
+        "print('intercept: ', LR.intercept_)\n",
+        "print('coefficients:')\n",
+        "print(LR.coef_)\n",
+        "\n",
+        "print('Recall the coefficients and intercept from our formula:')\n",
+        "print(beta)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6CsFHIcjdiMd",
+        "outputId": "3698288e-5fb2-47ef-a5b4-f9bd0430940a"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "intercept:  [-740.77633006]\n",
+            "coefficients:\n",
+            "[[ 2.4173551  27.8581628   2.67475542 13.06363395  0.        ]]\n",
+            "Recall the coefficients and intercept from our formula:\n",
+            "[[   2.4173551 ]\n",
+            " [  27.8581628 ]\n",
+            " [   2.67475542]\n",
+            " [  13.06363395]\n",
+            " [-740.77633006]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\large{\\text{Compute predictions on train data}}$"
+      ],
+      "metadata": {
+        "id": "vvyrxa8ud5Ne"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train_prediction = LR.predict(X)\n"
+      ],
+      "metadata": {
+        "id": "EgCUvjwrd6XR"
+      },
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importing R2_score module\n",
+        "from sklearn.metrics import r2_score\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "# computing R2 score and sum of square residuals\n",
+        "score=r2_score(y_train,y_train_prediction)\n",
+        "print('From scikit learn:')\n",
+        "print('R2 score is:',score)\n",
+        "mse=mean_squared_error(y_train,y_train_prediction)\n",
+        "print('sum of squared residuals:',n_train*mse)\n",
+        "print('RMSE:',np.sqrt(mse))\n",
+        "print('*****************')\n",
+        "\n",
+        "print('Recall the R2 score, sum of squared resuiduals and rmse from our formula: ')\n",
+        "print('R2:',R_sq_train)\n",
+        "print('sum of squared residuals:',sum_sq_residuals_train)\n",
+        "print('RMSE:',np.sqrt(sum_sq_residuals_train/n_train))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VMOjrfZ7eCJz",
+        "outputId": "bb01f67c-04c2-4eb9-f6d3-d41df2f84777"
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "From scikit learn:\n",
+            "R2 score is: 0.8638153791855696\n",
+            "sum of squared residuals: 2104316.310733597\n",
+            "RMSE: 130.2700764891798\n",
+            "*****************\n",
+            "Recall the R2 score, sum of squared resuiduals and rmse from our formula: \n",
+            "R2: [0.86381538]\n",
+            "sum of squared residuals: [2104316.3107336]\n",
+            "RMSE: [130.27007649]\n"
           ]
         }
       ]
@@ -3382,123 +3437,6 @@
             "sum of squared residuals: [nan]\n",
             "Root Mean Squarred Error (RMSE): [nan]\n",
             "R^2 score: [nan]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$\\Large{\\text{Finding $\\beta$ using sklearn library}}$"
-      ],
-      "metadata": {
-        "id": "y_O-Tkthdcub"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.linear_model import LinearRegression\n",
-        "# creating an object of LinearRegression class\n",
-        "LR = LinearRegression()\n",
-        "# fitting the training data\n",
-        "LR.fit(X,y)\n",
-        "#print the coefficients and the intercept\n",
-        "print('intercept: ', LR.intercept_)\n",
-        "print('coefficients:')\n",
-        "print(LR.coef_)\n",
-        "\n",
-        "print('Recall the coefficients and intercept from our formula:')\n",
-        "print(beta)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6CsFHIcjdiMd",
-        "outputId": "62b4e7b7-4ca8-4634-8319-3ed4cfcb2564"
-      },
-      "execution_count": 128,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "intercept:  [-740.77633006]\n",
-            "coefficients:\n",
-            "[[ 2.4173551  27.8581628   2.67475542 13.06363395  0.        ]]\n",
-            "Recall the coefficients and intercept from our formula:\n",
-            "[[   2.4173551 ]\n",
-            " [  27.8581628 ]\n",
-            " [   2.67475542]\n",
-            " [  13.06363395]\n",
-            " [-740.77633006]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$\\large{\\text{Compute predictions on train data}}$"
-      ],
-      "metadata": {
-        "id": "vvyrxa8ud5Ne"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_train_prediction = LR.predict(X)\n"
-      ],
-      "metadata": {
-        "id": "EgCUvjwrd6XR"
-      },
-      "execution_count": 129,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# importing R2_score module\n",
-        "from sklearn.metrics import r2_score\n",
-        "from sklearn.metrics import mean_squared_error\n",
-        "# computing R2 score and sum of square residuals\n",
-        "score=r2_score(y,y_train_prediction)\n",
-        "print('From scikit learn:')\n",
-        "print('R2 score is:',score)\n",
-        "mse=mean_squared_error(y,y_train_prediction)\n",
-        "print('sum of squared residuals:',n_train*mse)\n",
-        "print('RMSE:',np.sqrt(mse))\n",
-        "print('*****************')\n",
-        "\n",
-        "print('Recall the R2 score, sum of squared resuiduals and rmse from our formula: ')\n",
-        "print('R2:',R_sq_train)\n",
-        "print('sum of squared residuals:',sum_sq_residuals_train)\n",
-        "print('RMSE:',np.sqrt(sum_sq_residuals_train/n_train))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VMOjrfZ7eCJz",
-        "outputId": "643ed7be-1ae9-4d07-b868-491043b30ba0"
-      },
-      "execution_count": 130,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "From scikit learn:\n",
-            "R2 score is: 0.8638153791855696\n",
-            "sum of squared residuals: 2104316.310733597\n",
-            "RMSE: 130.2700764891798\n",
-            "*****************\n",
-            "Recall the R2 score, sum of squared resuiduals and rmse from our formula: \n",
-            "R2: [0.86381538]\n",
-            "sum of squared residuals: [2104316.3107336]\n",
-            "RMSE: [130.27007649]\n"
           ]
         }
       ]
