--- a/Assignment/AIMLCEP_Q1-3.ipynb
+++ b/Assignment/AIMLCEP_Q1-3.ipynb
@@ -1263,7 +1263,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOOBCb5bFtKr",
-        "outputId": "5ca757b9-fe6b-47b9-89b8-8d9083bea269"
+        "outputId": "49679576-2a93-43e2-be95-9478fc5f9d96"
       },
       "source": [
         "#Now we are ready for finding beta\n",
@@ -1279,16 +1279,24 @@
         "#Solving via linalg solve routine\n",
         "beta_train1 = np.linalg.solve(XTX,Xy)\n",
         "\n",
+        "import scipy.linalg\n",
+        "beta_train2 = scipy.linalg.solve(XTX,Xy)\n",
+        "\n",
+        "\n",
         "print('beta',beta_train)\n",
-        "print('beta',beta_train1)"
+        "print('beta',beta_train1)\n",
+        "print('beta',beta_train2)"
       ],
-      "execution_count": 33,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "XTX shape: (3, 3)\n",
+            "beta [[  28.02625976]\n",
+            " [  17.87051592]\n",
+            " [-726.86845722]]\n",
             "beta [[  28.02625976]\n",
             " [  17.87051592]\n",
             " [-726.86845722]]\n",
